add options to disable IPv4 or IPv6, only send updates if needed

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,7 @@ services:
     restart: always
     env_file:
       - .env
+    volumes:
+      - ${DATA_PATH:?DATA_PATH variable missing}:/data
     environment:
       INTERVAL: 300 # default
